--- a/todos.html
+++ b/todos.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Todo List Demo</title>
+    <link rel="stylesheet" href="todos.css">
   </head>
   <body>
 
