parent id bug fix

--- a/todos.html
+++ b/todos.html
@@ -7,13 +7,15 @@
   </head>
   <body>
 
-<ul id="parent">
+<ul id ='parent'>
   <li>wash Dog</li>
   <li>feed Dog</li>
   <li>hug Dog</li>
 </ul>
 
 
-<script src="todos.js" charset="utf-8"></script>
+<script src="todos.js" charset="utf-8"></<script>
+
+</script>>
   </body>
 </html>
