--- a/todos.html
+++ b/todos.html
@@ -14,8 +14,8 @@
 </ul>
 
 
-<script src="todos.js" charset="utf-8"></<script>
+<script src="todos.js" charset="utf-8"</<script>
 
-</script>>
+</script>
   </body>
 </html>
